--- a/index.html
+++ b/index.html
@@ -1,111 +1,12 @@
 <!DOCTYPE html>
 <html>
    <head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
         <title>Aleksandra Jachym CV</title>
         <link rel="stylesheet" href="style.css"/>
     </head>
    <body>
-      <header>
-        <img src="Ola.jpg"></img>
-        <div>
-            <h1 style=font-size:36px>Aleksandra Jachym</h1>
-            <span>studentka zarządzania</span>
-        </div>
-        <address>
-          <ul>
-             <li><svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.773a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z"></path></svg><b>Numer telefonu:</b>: <a href="tel: 789 225 199"></a>789 225 199</li>
-             <li><svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"></path><path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"></path></svg> <b> Email: aleksandrajachym20@gmail.com</b></li>
-             <li><svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M6 3a1 1 0 011-1h.01a1 1 0 010 2H7a1 1 0 01-1-1zm2 3a1 1 0 00-2 0v1a2 2 0 00-2 2v1a2 2 0 00-2 2v.683a3.7 3.7 0 011.055.485 1.704 1.704 0 001.89 0 3.704 3.704 0 014.11 0 1.704 1.704 0 001.89 0 3.704 3.704 0 014.11 0 1.704 1.704 0 001.89 0A3.7 3.7 0 0118 12.683V12a2 2 0 00-2-2V9a2 2 0 00-2-2V6a1 1 0 10-2 0v1h-1V6a1 1 0 10-2 0v1H8V6zm10 8.868a3.704 3.704 0 01-4.055-.036 1.704 1.704 0 00-1.89 0 3.704 3.704 0 01-4.11 0 1.704 1.704 0 00-1.89 0A3.704 3.704 0 012 14.868V17a1 1 0 001 1h14a1 1 0 001-1v-2.132zM9 3a1 1 0 011-1h.01a1 1 0 110 2H10a1 1 0 01-1-1zm3 0a1 1 0 011-1h.01a1 1 0 110 2H13a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg><b> Data urodzin:</b> 08.09.2000r.</li>
-             <li><svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z"></path></svg> <b>Miejsce zamieszkania:</b> Kraków</li>
-          </ul>
-        </address>
-       </header>
-      <main>
-        <section>
-            <h2>O mnie</h2>
-            <p>
-                My name is <b> Aleksandra</b>!
-                I am study management at Jagiellonian University. 
-                I am interested in Human Resources Management.
-                I am learning in this area on my own.
-                I read some books, listen some podcasts and take part in courses attributable with HR - and precisely recruitment.
-                I have recently started learning programming (HTML, CSS, JavaScript). 
-                I am looking for an internship as a recruiter, preferably in IT.
-        </p> 
-        </section>
-        <section>
-            <h2>Doświadczenie zawodowe</h2>
-            <ul>
-            <li> 2020–kwi 2020</li>
-            <li>seller/ customer services adviser</li>
-            <li><a href="https://www.lppsa.com/">LPP (Sinsay)</a></li>
-            </ul>
-
-            <ul>
-            <li>lip 2021–sie 2021</li>
-            <li>technology mentor</li>
-            <li><a href="https://www.rajska.info/">Wojewódzka Biblioteka Publiczna w Krakowie</a></li>
-            </ul>
-
-            <ul>
-            <li>wrz 2021–wrz 2021</li>
-            <li>telephone sales consultant</li>
-            <li><a href="https://www.orange.pl/">Orange Polska</a></li>
-            </ul>
-        </section>
-        <section>
-            <h2>Języki</h2>
-            <ul>
-                <li>Angielski B2+</li>
-                <li>Niemieci A1</li>
-                <li>Polski język ojczysty</li>
-            </ul>
-        </section>
-        <section>
-        <h2>Wykształcenie</h2>
-            <ul>
-            <li>2020-2023</li>
-            <li><a href=https://sylabus.uj.edu.pl/pl/3/1/2/9/133>Uniwersytet Jagielloński w Krakowie</a></li>
-            <li>zarządzanie publiczne</li>
-            </ul>
-            <ul>
-                <li>2016-2019</li>
-                <li><a href=https://www.pceikz.pl/Liceum>Ogólnokształcące im. Jana Rutyny w Szczucinie</a></li>
-                <li>profil humanistyczno-dziennikarski</li>
-            </ul>
-        </section>
-        <section>
-            <h2>Zainteresowania</h2>
-            <ul class="hobbies">
-            <ul>
-            <div>
-            <li><i class="fa-solid fa-film"></i><b>cinema</b></li>
-            <p>
-                Uwielbiam kino.
-            </p>
-            </div>
-            <div>
-            <li><i class="fa-solid fa-masks-theater"></i><b>theater</b></li>
-            <p>
-                Uwielbiam teatr.
-            </p>
-            </div>
-            <div>
-            <li><i class="fa-solid fa-user-group"></i><b>sociology</b></li>
-            <p>
-                Interesuję się socjologią
-            </p>
-            </div>
-            <div>
-            <li><i class="fa-solid fa-book"></i><b>reading</b></li>
-            <p>
-                Uwielbiam czytać książki.
-            </p>
-            </div>
-          </ul>
-       </section>
-      </main>
-     </body>
-   </html>
+      <h1>Aleksandra Jachym Portfolio</h1>
+      <p>Tu niedługo będzie moje portfolio 😊</p>
+   </body>
+</html>
 
